stop images being distorted when they are wider than the column

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,6 +82,7 @@ font-size: 13px;
 
 #content img {
     max-width: 100%;
+    height: auto !important;
 }
 
 h1, h2, h3, h4, h5 {
